# libaad-ccs2019

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
experiments/: 2018-07-24-aad-append-time-n-8192-b-1-r4.16xlarge.csv  2019-02-02-aad-append-time-n-8192-b-1024-r4.16xlarge-saturday.csv  2019-02-02-aad-append-time-n-8192-b-2048-r4.16xlarge-saturday.csv  2019-02-02-aad-append-time-n-8192-b-4096-r4.16xlarge-saturday.csv  2019-02-02-aad-append-time-n-8192-b-8192-r4.16xlarge-saturday.csv  2019-02-03-aad-append-time-n-8192-b-128-r4.16xlarge-saturdayeve.csv  2019-02-03-aad-append-time-n-8192-b-256-r4.16xlarge-saturdayeve.csv  2019-02-03-aad-append-time-n-8192-b-512-r4.16xlarge-saturdayeve.csv  2019-02-03-aad-append-time-n-8192-b-64-r4.16xlarge-saturdayeve.csv  2019-02-04-aad-append-time-n-8192-b-32-r4.16xlarge-saturdayeve.csv  regenerate-figures.sh
experiments/append-only-all-cases-07-22-2018/: aad-append-only-proof-10.csv  aad-append-only-proof-2.csv  machine.txt
experiments/avg-case-memb-proof-07-15-2018/10/: aad-memb-proof-1000.csv  aad-memb-proof-10000.csv  aad-memb-proof-100000.csv  aad-memb-proof-1000000.csv
experiments/worst-case-memb-proof-07-14-2018/: aad-memb-proof-1023.csv  aad-memb-proof-1048575.csv  aad-memb-proof-131071.csv  aad-memb-proof-16383.csv  aad-memb-proof-2047.csv  aad-memb-proof-262143.csv  aad-memb-proof-32767.csv  aad-memb-proof-4095.csv  aad-memb-proof-524287.csv  aad-memb-proof-65535.csv  aad-memb-proof-8191.csv
libaad/: .gitignore  CMakeLists.txt
libaad/app/: CMakeLists.txt  ParamsFix.cpp  ParamsGenPowers.cpp  ParamsGenTrapdoors.cpp  ParamsValidate.cpp
libaad/bench/: BenchFrontierSize.cpp  BenchGroupOps.cpp  BenchHashing.cpp  BenchMultiexp.cpp  BenchNtlConv.cpp  BenchPolyDiv.cpp  BenchPolyEea.cpp  BenchPolyFromRoots.cpp  BenchPolyMult.cpp  CMakeLists.txt
libaad/bench/macro/: MacroBenchAADAppendOnlyProofs.cpp  MacroBenchAADAppends.cpp  MacroBenchAADLookupProofs.cpp
libaad/include/aad/: AADProof.h  AADS.h  AccumulatedTree.h  AppendOnlyProof.h  BinaryTree.h  BitString.h  CommitUtils.h  Configuration.h.in  EllipticCurves.h  Frontier.h  Hashing.h  Library.h  MembProof.h  NtlLib.h  PolyCommit.h  PolyInterpolation.h  PolyOps.h  PublicParameters.h  Utils.h
libaad/include/aad/unnecessary/: PolyDivision.h
libaad/src/: BitString.cpp  CMakeLists.txt  Library.cpp  NtlLib.cpp  PolyCommit.cpp  PublicParameters.cpp  Utils.cpp
libaad/test/: CMakeLists.txt  TestAAD.cpp  TestAccumulatedTree.cpp  TestAssumptions.cpp  TestBinaryTree.cpp  TestBitString.cpp  TestFrontier.cpp  TestGroup.cpp  TestGroupElementSize.cpp  TestPolyDivision.cpp  TestPublicParams.cpp
public-params/: .gitignore
public-params/16384/: 16384pp  16384pp-0  16384pp-1  16384pp-2  16384pp-3  16384pp-4  16384pp-5  16384pp-6  16384pp-7
public-params/8192/: 8192pp  8192pp-0  8192pp-1  8192pp-2  8192pp-3  8192pp-4  8192pp-5  8192pp-6  8192pp-7
scripts/linux/: cmake.sh  cols.sh  gen-eclipse-project.sh  generate-qpke-params.sh  install-deps.sh  install-libs.sh  install.sh  make.sh  plot-append-only-proof.py  plot-append-times.py  plot-batched-appends.py  plot-memb-proof-rwc19.py  plot-memb-proof.py  run-append-only-bench-2i.sh  run-append-time-bench.sh  set-env.sh  submodule-update.sh  test.sh  twinplot-memb-proof.py
scripts/linux/shlibs/: check-env.sh
